--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/dotenv": "^3.4",
+        "symfony/monolog-bundle": "^3.1",
         "symfony/templating": "^3.4",
         "symfony/twig-bundle": "^3.4",
         "symfony/yaml": "^3.4"
